# bxc

./: .biomeignore  .env.example  .gitignore  .gitmodules  .npmignore  .npmrc  AGENTS-ARCHITECTURE.json  AGENTS.md  AppxManifest.xml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  GEMINI.md  LICENSE  MEGA-PLAN.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  SKILLS.md  THANKS.md  ai.json  biome.json  bunfig.toml  debug-serp.html  discovery-design-results.json  drizzle.config.ts  feedback__full_autonomy.md  fix-lint.ts  fix-lint2.ts  gemini-extension.json  install.ps1  install.sh  package.json  repro-http.ts  repro-search.ts  skills-lock.json  tsconfig.json  turbo.json  (+2 more)
.claude/: .mcp.json  AUDIT.md  PLUGIN-FIXES-APPLIED.md  bunlight.local.example.md  settings.json
.claude-plugin/: PUBLISHING.md  README.md  plugin.json
.claude/agents/: bunlight-bench-runner.md  bunlight-cookie-extractor.md  bunlight-crawler.md  bunlight-debugger.md  bunlight-profile-router.md  bunlight-publisher.md  bunlight-scrape-debugger.md  bunlight-scraper.md  bunlight-test-runner.md  bxc-scrape-debugger.md  bxc-web-researcher.md  rust-ffi-reviewer.md
.claude/commands/: bunlight-bench.md  bunlight-cookie-import.md  bunlight-crawl.md  bunlight-detect.md  bunlight-doctor.md  bunlight-init.md  bunlight-scrape.md  bunlight-test.md  refresh-claude-md.md  sync-claude.md
.claude/hooks/: hooks.json
.gemini/: settings.json
.gemini/policies/: bunlight.toml  bxc.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml  test.yml
benchmarks/: agent-browser-engine.bench.ts  mock-server.ts  run-all.ts  types.ts
bun/: MIGRATION_PLAN.md
data/: bbx_metagame_data.json  fut_extracted_database.json  rankings_wayback_urls.json  wbo_rankings_parsed.json
docs/: AGENTS-SKILLS-BEST-PRACTICES.md  ANTI-BOT-STACK.md  BENCHMARKS.md  BUILD-WINDOWS.md  BUN-NATIVE-AUDIT.md  CDP-COVERAGE.md  CHROME-DEVTOOLS-MCP-ANALYSIS.md  CHROME-USER-DATA-PARSING.md  CHROME-UTILS.md  CHROMIUM-RUST.md  CI.md  CONFIG.md  CRAWLEE-PATTERNS.md  CURL-IMPERSONATE.md  DEPS-AUDIT.md  ENQUEUE-LINKS.md  FAQ.md  FRAMEWORK-DETECTION.md  GOOGLE-ATLAS.md  HAR-RECORDER.md  IMPIT-EVALUATION.md  LICENSING.md  LIGHTPANDA-WINDOWS.md  LINTING.md  PHASE1-CDYLIB.md  PHASE1-STATUS.md  PLAN.md  PLAYWRIGHT-KILLER-PLAN.md  POSTINSTALL.md  PROFILE-FAST-RESULTS.md  PROFILE-MAX-RESULTS.md  PROFILE-STEALTH-RESULTS.md  PROFILER.md  PROFILES-WINDOWS.md  PROFILES.md  PUBLISHING.md  PUPPETEER-AUDIT.md  RATE-LIMITING.md  ROADMAP-DOMINATION.md  SCRAPERS.md  (+11 more)
docs/apify/: README.md  (+4 more)
examples/: 05-puppeteer-zero-spawn.ts  06-stealth-cloudflare.ts  07-max-turnstile-solver.ts  08-massive-crawl.ts  09-ai-extraction.ts  10-massive-google-audit.ts  README.md  crawl-chromium-developers.ts  design-discovery.ts  ecommerce-price-monitor.ts  massive-google-map.ts  reddit-json-crawler.ts  wikipedia-infobox-extractor.ts  xcom-scraper.ts
python-bridge/: depot_manager.py  main.py  pyproject.toml  rag_manager.py  semantic_resolver.py
reports/: scan-v1-bash.json  scan-v2-bun.json
rust-bridge/: Cargo.toml
rust-bridge/crates/bunlight-engine/: Cargo.toml
rust-bridge/crates/bunlight-engine/src/: main.rs
rust-bridge/crates/bxc-chromium/: Cargo.toml
rust-bridge/crates/bxc-chromium/src/: lib.rs
rust-bridge/crates/bxc-engine/: Cargo.toml
rust-bridge/crates/bxc-engine/src/: main.rs
rust-bridge/crates/gemini-web/: Cargo.toml  README.md
rust-bridge/crates/gemini-web/examples/: smoke.rs
rust-bridge/crates/gemini-web/src/: auth.rs  bootstrap.rs  boq.rs  client.rs  error.rs  lib.rs  models.rs  payload.rs  rpc_ids.rs  transport.rs  types.rs
rust-bridge/crates/obscura-browser/src/: page.rs
rust-bridge/crates/obscura-cdp/src/: server.rs
rust-bridge/crates/obscura-cdp/src/domains/: page.rs  runtime.rs
rust-bridge/crates/obscura-dom/src/: lib.rs  markdown.rs  selector.rs  tree_sink.rs
rust-bridge/crates/obscura-js/: Cargo.toml
rust-bridge/crates/obscura-js/js/: bootstrap.js
rust-bridge/crates/obscura-js/src/: lib.rs  module_loader.rs  ops.rs  runtime.rs
rust-bridge/crates/obscura-mcp/src/: lib.rs
rust-bridge/crates/obscura-net/: Cargo.toml
rust-bridge/crates/obscura-net/src/: client.rs  dns.rs  lib.rs  wreq_client.rs
rust-bridge/crates/x-algorithm/: Cargo.toml
rust-bridge/crates/x-algorithm/src/: lib.rs
rust-bridge/crates/x-client/: Cargo.toml  README.md  RECON.md
rust-bridge/crates/x-client/data/: gryphon-graphql-catalog.json
rust-bridge/crates/x-client/src/: api.rs  catalog.rs  catalog_sync.rs  lib.rs  main.rs  premium.rs  runtime_query_ids.rs  surface.rs  x_pro_deck.rs
rust-bridge/src/: chromium_cxx.rs  lib.rs  obscura_engine.rs
scripts/: apply-bxc-rebrand.ts  atlas-from-cache.ts  autopilot.sh  backup-bunlight.sh  backup-bxc.sh  bbx_metagame_analyst.ts  build-lightpanda-static.ts  build-serverless.ts  build-standalone.ts  build-win32.ts  build-windows.ps1  build-windows.ts  bxc-control.sh  cleanup.ts  cron-scheduler.ts  deploy-windows.ps1  fetch_all_rankings.ts  fetch_bun_docs.ts  fetch_rankings_cdx.ts  fetch_rankings_page.ts  fetch_rankings_wayback.ts  generate_wbo_sitemap.ts  god-mode-executor.ts  google-design-recon.ts  grok-scan-with-cookies.ts  inspect_burst_html.ts  inspect_panels.ts  inspect_rankings.ts  install-bxc.ps1  install-deps-windows.ps1  map_fut.ts  mass_scrape_wbo.ts  measure-coldstart.ts  measure-rss.ts  parse_rankings_all.ts  path-sentinel.ts  post-mapping.ts  postinstall.ts  publish.ts  recursive_fut_scraper.ts  (+21 more)
specs/: README.md  http-crawl-headers.md  llms-txt.md  markdown-gfm.md  opengraph-meta.md  robots-txt.md  sitemap-xml.md  url-normalization.md  yaml-frontmatter.md
src/: detect-deep.ts  detect.ts
test/: autonomous-crawler.test.ts  bxc-bridge.test.ts  context-smoke.test.ts  frame-smoke.test.ts  google-keyless-web.test.ts  google-power.test.ts  locator-smoke.test.ts  profile-wiring.test.ts  rust-bridge.test.ts  serverless-handler.test.ts  stealth-challenge.test.ts  transport.test.ts  upgrade-smoke.test.ts  zigbridge-smoke.test.ts
types/: ConnectionTransport.ts
(+512 files in other folders)
