[project]
name = "python-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.18",
    "llama-index>=0.14.21",
    "markdownify>=1.2.2",
    "requests>=2.34.0",
    "sentence-transformers>=5.4.1",
    "urllib3>=2.7.0",
]
