# SPDX-License-Identifier: Apache-2.0
[package]
name = "bxc-chromium"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }
