[package]
name = "obscura-js"
version.workspace = true
edition.workspace = true

[build-dependencies]
deno_core = "0.400"

[dependencies]
obscura-dom = { workspace = true }
obscura-net = { workspace = true }
deno_core = "0.400"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
html5ever = { workspace = true }
deno_error = { workspace = true }
base64 = { workspace = true }
