# SPDX-License-Identifier: Apache-2.0
# Workspace member of rust-bridge (see ../../Cargo.toml).
# Shared dependencies are inherited from [workspace.dependencies] for single-
# version dedup; only the X-specific ones (reqwest 0.12, dirs, json5, time) and
# additive features (uuid/fast-rng, clap/env) are declared locally.
[package]
name        = "x-client"
version     = "0.2.0"
edition     = "2024"
publish     = false
license     = "Apache-2.0"
description = "X / Twitter native GraphQL + REST client (cookie auth, no API key required)"
repository  = "https://github.com/aphrody-code/bxc"

[lints]
workspace = true

[[bin]]
name = "x-cli"
path = "src/main.rs"

[lib]
name = "x_client"
path = "src/lib.rs"

[dependencies]
# HTTP — reqwest 0.12 with rustls-tls (the bridge cdylib uses 0.13; Cargo links
# both — no `links` conflict — so the X code stays on its tested 0.12 API).
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "multipart"] }
# Shared with the workspace (single resolved version across the bridge).
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
regex       = { workspace = true }
rustls      = { workspace = true }
# rusqlite 0.37 — `libsqlite3-sys` declares `links = "sqlite3"`, so the whole
# cdylib must resolve a single version (shared with bxc-chromium).
rusqlite    = { workspace = true }
# Additive features on top of the workspace declaration.
uuid        = { workspace = true, features = ["fast-rng"] }
clap        = { workspace = true, features = ["env"] }
# X-client-specific (not used elsewhere in the workspace).
dirs        = { version = "6" }
json5       = { version = "0.4" }
time        = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# X For You algorithm (native ranking). Additive, used for optional local re-ranking
# of this crate's Tweet/User results (timelines, search, etc). See `rank_tweets`,
# `tweet_to_algo_candidate` and the re-exported `x_algorithm::*` types.
x-algorithm = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
